resources/css/gallery.css
/*The panel*/
.panel{
	background-color: rgba(50,50,50,0.8); /*A semi-transparent grey*/
	border-radius: 10px;
	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 22px 0 rgba(0, 0, 0, 0.25); /*A subtle shadow*/
	text-align: center; /*Make the image centered*/
	transition: 0.5s; 
}

.panel:hover{
	/*Make the shadow bigger when the panel is hovered*/
	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25); 
	background-color: rgba(60,60,60,0.8); /*Make the panel lighter when the panel is hovered*/
}

.panel img{
	border-radius: 10px;
	border: double;
	border-color: rgb(100,100,100);
	border-width: 7px;
	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
	transition: 0.5s;
	cursor: pointer;
}

.panel img:hover{
	border-color: rgb(120,120,120);
	box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.3), 0 13px 27px 0 rgba(0, 0, 0, 0.25);
}

.panel a{
	color: white;
	font-size: 30px;
	font-family: 'Open Sans', sans-serif;
	text-decoration: none;
	width: 100%;
	display: inline-block;
	margin: 20px;
}

.galleryBody{
	margin: 14px 4px;
}

.title{
	font-family: 'Petit Formal Script', cursive;
	color: white;
	text-shadow: 2px 2px 2px #AAA;
	padding: 2px;
	font-size: 20px;
}

.description{
	padding: 10px;
	text-align: center;
	color: white;
	font-family: 'Open Sans', sans-serif;
}

.radios{
	padding-bottom: 10px;
	text-align: left;
	color: white;
	font-family: 'Open Sans', sans-serif;
	display: inline-block;
	font-size: 20px;
}

*{
	box-sizing: border-box;
}

.responsive{
	padding: 6px 6px;
	float: left;
	width: 24.99999%;
}

@media only screen and (max-width: 1200px){
	.responsive{
		width: 49.99999%;
		margin: 6px 0;
	}
}

@media only screen and (max-width: 650px){
	.responsive{
		width: 100%;
	}
}


/*Picture Viewer*/
.overlay{
	/*Height and width change how the overlay is revealed*/
	height: 0%;
	width: 100%;
	position: fixed; /*Stay in place*/
	z-index: 1; /*Sit on top because it is an overlay*/
	left: 0;
	top: 0;
	background-color: rgb(0,0,0);
	background-color: rgba(0,0,0,0.8);
	overflow-x: hidden; /*No horizontal scrolling*/
	/*transition: 0.2s;*/
}

#picViewer .overlay-content{
	text-align: center; /*Center the image*/
	margin: 30px;
	margin-top: 100px;
}

#picViewer .overlay-content img{
	/*So the image scales properly*/
	max-width: 100%;
	height: auto;
	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
	border-radius: 10px;
}

.overlay #closeButton{
	text-decoration: none;
	color: white;
	font-size: 70px;
	position: absolute;
	top: 20px;
	right: 45px;
	transition: 0.2s;
}

.overlay #closeButton:hover{
	color: rgb(200,200,200);
}

/*Filter*/
.all{
	display: initial;
}

.oil{

}

.pencil{

}

.penInk{

}

.other{
	
}

